--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+sqlalchemy==2.0.23
 pyTelegramBotAPI==4.15.0
 Flask==3.0.0
 Flask-CORS==4.0.0
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
 python-dotenv==1.0.0
-sqlalchemy==2.0.23
+nltk==3.8.1
+pandas==2.1.4
+numpy==1.24.3
+schedule==1.2.0
